changed the css

--- a/Documents/daniel file/portfolio/portfolio-website/src/App.css
+++ b/Documents/daniel file/portfolio/portfolio-website/src/App.css
@@ -1,5 +1,5 @@
 body {
-    box-sizing: border-box;
+    box-sizing: box-sizing;
     position: relative;
     line-height: 1.5;
     font-family: sans-serif;
